<resources>
    <string name="app_name">InnoBusinessCards</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="emailHint">Email</string>
    <string name="passwordHint">Password</string>
    <string name="log_in_hint">Log in</string>
    <string name="register_button">Register</string>
    <string name="log_in_button">Log in</string>
    <string name="confirm_password_hint">Confirm password</string>
    <string name="bottom_bar_title_1">Your card</string>
    <string name="bottom_bar_title_3">More</string>
    <string name="bottom_bar_title_2">Shared cards</string>
    <string name="avatar">Avatar</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="description">Description</string>
    <string name="name">Name</string>
    <string name="contacts">Contacts</string>
    <string name="button_new">New</string>
    <string name="socials">Socials</string>
</resources>