<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
    </data>

    <ScrollView
        android:id="@+id/scrollCard"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!-- TODO make avatar shapes (round, rounded corners, square) -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/cardAvatar"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginTop="16dp"
                android:contentDescription="@string/avatar"
                android:scaleType="fitCenter"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:srcCompat="@drawable/avatar_default" />

            <EditText
                android:id="@+id/cardName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="32dp"
                android:background="@android:color/transparent"
                android:textSize="24sp"

                android:gravity="center"
                android:importantForAutofill="no"
                android:inputType="textMultiLine|textPersonName"
                android:minHeight="48dp"
                android:hint="@string/name"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cardAvatar" />

            <EditText
                android:id="@+id/cardDescription"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="32dp"
                android:background="@drawable/layout_background_rounded"
                android:elevation="4dp"
                android:ems="10"
                android:gravity="start|top"
                android:importantForAutofill="no"
                android:inputType="textMultiLine"
                android:outlineProvider="bounds"
                android:padding="5dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:hint="@string/description"
                android:textColor="?colorOnSecondaryContainer"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cardName" />

            <TextView
                android:id="@+id/textContacts"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="32dp"
                android:text="@string/contacts"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cardDescription" />

            <LinearLayout
                android:id="@+id/contactsContainerLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="32dp"
                android:background="@android:color/transparent"
                android:orientation="vertical"
                android:padding="0dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textContacts">

                <!--                Add contact selection-->


                <LinearLayout
                    android:id="@+id/contactsContainer"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                </LinearLayout>

                <Button
                    android:id="@+id/buttonAddContact"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/view_background_rounded"
                    android:drawableEnd="@drawable/ic_add"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:insetTop="0dp"
                    android:minHeight="42dp"
                    android:paddingLeft="12dp"
                    android:paddingRight="12dp"
                    android:text="@string/button_new"
                    app:iconPadding="8dp" />

            </LinearLayout>

            <TextView
                android:id="@+id/textSocials"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="32dp"
                android:text="@string/socials"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/contactsContainerLayout" />

            <LinearLayout
                android:id="@+id/socialsContainerLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="32dp"
                android:background="@android:color/transparent"
                android:orientation="vertical"
                android:padding="0dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textSocials">

                <LinearLayout
                    android:id="@+id/socialsContainer"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                </LinearLayout>

                <Button
                    android:id="@+id/buttonAddSocial"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/view_background_rounded"
                    android:drawableEnd="@drawable/ic_add"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:insetTop="0dp"
                    android:minHeight="42dp"
                    android:paddingLeft="12dp"
                    android:paddingRight="12dp"
                    android:text="@string/button_new"
                    app:iconPadding="8dp" />
            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>